Fix community channel cards on mobile.

--- a/src/app/components/community/channel/card/card.styl
+++ b/src/app/components/community/channel/card/card.styl
@@ -12,7 +12,6 @@
 	cursor: pointer
 	outline: none
 	// Overwrite sheet styling
-	padding: 0
 	margin-bottom: ($line-height-computed / 2)
 
 	&:hover
